feat(16096): Multi-arity ops
Signed-off-by: mxtartaglia <maxi@swirldslabs.com>